force-app/main/default/objects/ContentVersion/fields/LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
    <label>LegacyNoteConvertedLastModifiedDate</label>
    <type>Date</type>
</CustomField>