force-app/main/default/objects/ContentVersion/fields/OWC_Source__c.field-meta.xml
<CustomField>
    <fullName>OWC_Source__c</fullName>
    <label>OWC Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>